--- a/teste/application-prod.yml
+++ b/teste/application-prod.yml
@@ -8,5 +8,6 @@ management:
         include:
         - '*'
 greeting-service:
-  greeting: Ola
-  default-value: Mundo          
+  greeting: Cia
+  default-value: Mondo
+          
